--- a/package.json
+++ b/package.json
@@ -12,12 +12,12 @@
     "next": "15.4.6",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "next-auth": "beta",
+    "@auth/drizzle-adapter": "latest",
     "drizzle-orm": "^0.37.0",
     "@neondatabase/serverless": "^0.10.1",
     "zod": "^3.23.8",
     "sanitize-html": "^2.13.0",
-    "next-auth": "^5.0.0",
-    "@auth/drizzle-adapter": "^1.7.4",
     "nodemailer": "^6.9.13",
     "@netlify/blobs": "^8.0.0"
   },
