--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "next-auth": "beta",
     "@auth/drizzle-adapter": "latest",
     "drizzle-orm": "^0.37.0",
+    "drizzle-kit": "^0.26.0",
     "@neondatabase/serverless": "^0.10.1",
     "zod": "^3.23.8",
     "sanitize-html": "^2.13.0",
